Fixed sec bugs, added openAPI framework, chalta hai code ig